# echoes-of-beastlight

./: .cursorrules  .env.example  .eslintrc.json  .gitignore  .license-header  .markdownlint.yml  .pre-commit-config.yaml  .prettierrc  .typos.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  GENERATION_STATUS.md  GENERATION_SUMMARY.json  GENERATION_SUMMARY.md  JBCOM_CONTROL_CENTER_AGENT_USE.md  MIGRATION_ROADMAP.md  Makefile  Makefile.toml  PR_FEEDBACK_RESPONSE.md  README.md  biome.json  build-web.sh  clippy.toml  commitlint.config.js  deny.toml  docker-compose.yml  environment.json  init.sh  jest.config.js  jest.preset.js  justfile  nx.json  package-lock.json  package.json  pnpm-lock.yaml  project.json  run-generator.sh  rustfmt.toml  tsconfig.base.json  (+2 more)
.cache/metaprompt/: cache.json
.github/: SECURITY.md  copilot.yaml  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/agentic-ci-resolution/: action.yml
.github/actions/agentic-issue-triage/: action.yml
.github/actions/agentic-pr-review/: action.yml
.github/actions/openai-game-gen/: action.yml  jest.config.js  package.json  project.json  tsconfig.json
.github/actions/openai-game-gen/src/: index.test.ts  index.ts
.github/prompts/game-generation/: audio-generator.md  cargo-toml.md  level-entities.md  level-layout-yoleck.md  level-layout.md  level-logic.md  level-visuals.md  main-rs.md  monster-generator.md  quest-generator.md  sprite-generator.md  tilemap-module.md
.github/prompts/metaprompts/: level-design-cascade.md  style-guide-cascade.md
.github/workflows/: bootstrap-beastlight.yml  build-android.yml  ci.yml  code-quality.yml  deploy-web.yml  generate-file.yml  generate-levels.yml  generate-tilemaps.yml  metaprompt-executor-v2.yml  metaprompt-executor.yml  release.yml  rust-tests.yml  security-audit.yml  typescript-quality.yml
.husky/: pre-commit
apps/mobile/: App.tsx  app.json  eas.json  metro.config.js  package.json  tsconfig.json
apps/mobile/__tests__/: placeholder.test.ts
apps/mobile/components/: GameHUD.tsx
apps/mobile/game/: BabylonView.tsx
apps/mobile/game/scenes/: CombatScene.ts  WorldScene.ts  index.ts
apps/mobile/game/systems/: CombatSystem.ts
apps/mobile/screens/: GameScreen.tsx  LoadGameScreen.tsx  MainMenuScreen.tsx  SettingsScreen.tsx
apps/mobile/stores/: gameStore.ts
apps/web/: .gitignore  index.html  package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/components/: DebugPanel.tsx  GameCanvas.tsx
apps/web/src/stores/: gameStore.ts
assets/: .gitkeep
assets/audio/: audio_specs.json  music_specs.yaml  sfx_specs.yaml
assets/levels/: cratervine_chasm.yol  verdant_flats.yol
assets/quests/: glintrock_expanse_quests.yaml
assets/sprites/: sprite_specs.json  tiles_glintrock_expanse.yaml  tiles_verdant_flats.yaml
build-tools/: Cargo.toml  project.json  run-tests.sh
build-tools/src/: cascade_executor.rs  cascade_main.rs  config.rs  generator.rs  git_tracker.rs  lib.rs  main.rs  metaprompt.rs  studio_main.rs  targeted_generator.rs  templates.rs
build-tools/src/studio/: console.rs  editor.rs  gallery.rs  generator.rs  mod.rs  preview.rs  theme.rs  wizard.rs
build-tools/tests/fixtures/: test-config.yaml
build-tools/tests/integration/: full_generation_test.rs  openai_api_test.rs
build-tools/tests/unit/: generator_test.rs
docs/: ARCHITECTURE.md  ECOSYSTEM.md  IDEMPOTENCY.md
docs/_static/: jbcom-sphinx.css
docs/director/: project-overview.md
docs/technical/: ai-agent-context.md  bevy-ecosystem-evaluation.md  ci-cd.md  testing-strategy.md  tooling.md
e2e/: project.json
game/: Cargo.toml  build.rs  clippy.toml  rustfmt.toml
game/assets/: metaprompt.toml
game/assets/data/: monsters.yaml
game/assets/quests/: glintrock_expanse_quests.yaml
game/assets/sprites/: monster_sprites.yaml  sprite_specs.json  tiles_glintrock_expanse.yaml  tiles_verdant_flats.yaml
game/assets/sprites/tiles/: .generate
game/assets/sprites/ui/: .generate
game/assets/tilemaps/: verdant_flats_tiles.yaml
game/metaprompts/: root.toml
game/metaprompts/templates/: style_guide_template.toml
game/src/: .gitkeep  components.rs  lib.rs  main.rs  metaprompt.toml  tilemap_generation.rs  world_generation.rs
game/src/config/: game.rs  generation.rs  mod.rs  style.rs
game/src/systems/: combat.rs  inventory.rs  mod.rs  movement.rs  taming.rs
game/src/tilemaps/: ashbarrow_wastes.rs  cratervine_chasm.rs  forgotten_roots.rs  glintrock_expanse.rs  glintrock_expanse_tilemap.rs  mod.rs  verdant_flats.rs
game/src/world/: generation.rs  lexicon.rs  mod.rs  seed.rs  tiles.rs
generated-test/: Cargo.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: .gitkeep  components.rs  lib.rs  main.rs  tilemap_generation.rs  world_generation.rs
src/systems/: combat.rs  inventory.rs  movement.rs  taming.rs
src/tilemaps/: ashbarrow_wastes.rs  cratervine_chasm.rs  forgotten_roots.rs  glintrock_expanse.rs  glintrock_expanse_tilemap.rs  mod.rs  verdant_flats.rs  verdant_flats_tilemap.rs
tests/e2e/: package-lock.json  package.json  playthrough.spec.ts  playwright.config.ts
tools/: Cargo.toml  ai-game-generator.js  build.js  jest.config.js  metaprompt-executor.js  metaprompt-runner-v2.js  metaprompt-runner.js  package.json  run-tests.sh  validate-assets.js
tools/src/: config.rs  generator.rs  git_tracker.rs  lib.rs  main.rs  studio_main.rs  templates.rs
tools/src/studio/: console.rs  editor.rs  gallery.rs  generator.rs  mod.rs  preview.rs  theme.rs  wizard.rs
tools/tests/: README.md
tools/tests/fixtures/: test-config.yaml
tools/tests/integration/: full_generation_test.rs  openai_api_test.rs
tools/tests/unit/: generator_test.rs
workflows/: generate-file.yml
