[package]
name = "echoes_of_beastlight"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dependencies]
bevy = { version = "0.12", features = ["wayland", "webgl2"] }
bevy_ecs_tilemap = { version = "0.12", features = ["atlas"] }
bevy-yoleck = { version = "0.17", features = ["vpeol_2d"] }
mapgen = { version = "0.5" }
bevy_egui = { version = "0.23" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
rand = { version = "0.8" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
