[package]
name = "echoes-of-beastlight"
version = "0.1.0"
edition = "2024"
authors = ["AI Game Generator"]
license = "MIT"
description = "A JRPG adventure featuring monster taming and procedural world generation"
repository = "https://github.com/yourusername/echoes-of-beastlight"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.14"
bevy-yoleck = "0.24"
bevy_rapier2d = "0.27"
leafwing-input-manager = "0.17"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.9"
rand_chacha = "0.9"

[build-dependencies]
ai-game-generator = { path = "../build-tools" }
anyhow = "1.0"
tokio = { version = "1.47", features = ["rt", "macros"] }

[[bin]]
name = "echoes-of-beastlight"
path = "src/main.rs"

[features]
default = ["bevy/dynamic_linking"]
dev = ["bevy/file_watcher", "bevy/embedded_watcher"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
strip = true
