[package]
name = "echoes-of-beastlight"
version = "0.1.0"
edition = "2024"
authors = ["AI Game Generator"]
license = "MIT"
description = "A JRPG adventure featuring monster taming and procedural world generation"
repository = "https://github.com/yourusername/echoes-of-beastlight"

[dependencies]
bevy = { version = "0.17.0", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.17"
bevy-yoleck = "0.29"
bevy_rapier2d = "0.32"
bevy_save = "1.0"
bevy_cobweb = "0.18"
bevy_cobweb_ui = "0.22"
beet_flow = "0.4"
leafwing-input-manager = "0.17"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
rand = "0.9"
rand_chacha = "0.9"

[[bin]]
name = "echoes-of-beastlight"
path = "src/main.rs"

[features]
default = []
dev = ["bevy/dynamic_linking"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
strip = true
