Here is the `Cargo.toml` file for your Bevy game project "Echoes of Beastlight":

```toml
[package]
name = "echoes_of_beastlight"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["echoes_of_beastlight"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.12", features = ["dynamic", "wayland", "webgl2"] }
bevy_ecs_tilemap = { version = "0.12", features = ["atlas"] }
bevy_yoleck = { version = "0.17", features = ["vpeol_2d"] }
mapgen = { version = "0.5" }
bevy_egui = { version = "0.23" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9" }
rand = { version = "0.8" }

[features]
default = ["std"]
std = [
    "bevy/std",
    "bevy_ecs_tilemap/std",
    "bevy_yoleck/std",
    "mapgen/std",
    "bevy_egui/std",
    "serde/std",
    "serde_yaml/std",
    "rand/std",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
```

This `Cargo.toml` file includes the workspace setup, WASM features, and optimization profiles as per your request. It also includes the exact versions of the dependencies you specified.
