[package]
name = "ai-game-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-gen"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-openai = { version = "0.23", default-features = false, features = ["rustls"] }
tiktoken-rs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.4"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
image = "0.24"
base64 = "0.21"
indicatif = "0.17"
handlebars = "5.0"
rayon = "1.8"
futures = "0.3"
md5 = "0.7"
chrono = "0.4"
colored = "2.0"